fix: limit visible  width of feedback text

--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -62,6 +62,7 @@
     margin-top: 12px;
     color: var(--dark-shade-75);
     font-size: 14px;
+    overflow: hidden;
   }
 
   &__feedback-form {
